@@ -1,0 +1,1 @@
+dtparam=spi=on
